--- a/src/index.css
+++ b/src/index.css
@@ -144,7 +144,7 @@ svg {
 /* Card */
 
 .card_ul {
-    width: 270px;
+    width: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -153,10 +153,17 @@ svg {
     margin-bottom: 3rem;
 }
 
+.card_li {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+
 
 .card_img {
-    width: 270px;
-    height: 150px;
+    width: 200px;
+    height: 120px;
     border-radius: 10px;
     margin-bottom: 1rem;
     cursor: pointer;
@@ -171,7 +178,7 @@ svg {
     width: 20px;
     border: none;
     box-shadow: 0 0 5px 2px #000000;
-    margin: 0 .3rem;
+    margin: 0.3rem .3rem;
     cursor: pointer;
 }
 
